syntax = "proto3";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

// --- Raft Sketch

// TODO: eraftpb.proto
// raft-rs Message
message Message {
}

service RaftNode {
  rpc accept (Message) returns (Empty);
}

message Empty {
}

service RaftSqliteAPI {
  rpc Query (QueryRequest) returns (QueryResponse);
  rpc Execute (ExecuteRequest) returns (ExecuteResponse);
  rpc BulkQuery (BulkQueryRequest) returns (BulkQueryResponse);
  rpc BulkExecute (BulkExecuteRequest) returns (BulkExecuteResponse);
}

message SerdeContainer {
  oneof format {
    string json = 1;
    bytes rust_bincode = 2;
  }
}

message QueryRequest {
  SerdeContainer payload = 1;
}
message QueryResponse {
  SerdeContainer payload = 1;
}
message ExecuteRequest {
  SerdeContainer payload = 1;
}
message ExecuteResponse {
  SerdeContainer payload = 1;
}
message BulkExecuteRequest {
  SerdeContainer payload = 1;
}
message BulkExecuteResponse {
  SerdeContainer payload = 1;
}
message BulkQueryRequest {
  SerdeContainer payload = 1;
}
message BulkQueryResponse {
  SerdeContainer payload = 1;
}
